# sidereal

./: .dockerignore  .gitignore  .golangci.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  gauntlet-engineering-summary.md  go.mod  go.sum  sidereal-engineering-summary.md  wrangler.jsonc
.github/workflows/: ci.yaml  release.yaml  security-scan.yaml
api/v1alpha1/: groupversion_info.go  siderealaoauthorization_types.go  siderealframework_types.go  siderealincident_types.go  siderealprobe_types.go  siderealproberecommendation_types.go  siderealproberesult_types.go  siderealproberesult_types_test.go  siderealreport_types.go  siderealsystemalert_types.go  zz_generated.deepcopy.go
cmd/controller/: main.go
cmd/probe-admission/: main.go
cmd/probe-bootstrap/: main.go
cmd/probe-netpol/: main.go
cmd/probe-rbac/: main.go
cmd/probe-secret/: main.go
cmd/sidereal/: main.go
compliance/: README.md
compliance/crm/: customer-responsibility-matrix.md
detection-probe/: Cargo.toml
detection-probe/seccomp/: detection-probe.json
detection-probe/src/: catalog.rs  main.rs
detection-probe/src/techniques/: mod.rs  t1053.rs  t1059.rs  t1068.rs  t1069.rs  t1078.rs  t1552_001.rs  t1552_007.rs  t1611.rs  t1613.rs
docs/: getting-started.md
examples/: admission-probe.yaml  ao-authorization.yaml  detection-probe.yaml  enforce-with-incident.yaml  namespace-selector-probe.yaml  netpol-probe.yaml  rbac-probe.yaml  secret-probe.yaml
hack/: bootstrap-kind.sh  kind-config.yaml  verify-fips.sh
website/: astro.config.mjs  package-lock.json
(+259 files in other folders)
