[package]
name = "sidereal-detection-probe"
version = "0.1.0"
edition = "2021"
description = "Sidereal detection probe - fires adversarial syscall patterns for detection validation"

[features]
default = []
fips = ["aws-lc-rs/fips"]

[dependencies]
aws-lc-rs = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
